--- a/zoo-css-challenge/index.html
+++ b/zoo-css-challenge/index.html
@@ -78,6 +78,19 @@
 			<p>Giraffes use their height to good advantage and browse on leaves and buds in treetops that few other animals can reach (acacias are a favorite). Even the giraffe's tongue is long! The 21-inch tongue helps them pluck tasty morsels from branches. Giraffes eat most of the time and, like cows, regurgitate food and chew it as cud. A giraffe eats hundreds of pounds of leaves each week and must travel miles to find enough food.</p>
 		</section>
 
+		<section class="dolphin">
+			<h2>Dolphin</h2>
+
+			<p>dolphins are cute</p>
+
+			<h3>Behavior</h3>
+
+			<p>They can swim</p>
+
+			<h3>Height and Size</h3>
+			<p>They are big</p>
+		</section>
+
 		<section class="news">
 			<h2>News</h2>
 			<div class="card">
